--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,6 +56,7 @@ services:
       - influxdb
     ports:
       - 3000:3000
+    user: ${UID}
     volumes:
       - ./data/grafana:/var/lib/grafana
 
