--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
   chronograf:
     container_name: ${PROJECT_NAME}-chronograf
     image: arm32v7/chronograf:latest
+    restart: always
     ports:
       - 8888:8888
     volumes:
@@ -56,7 +57,7 @@ services:
       - influxdb
     ports:
       - 3000:3000
-    user: ${UID}
+    user: "${UID}:#{UID}"
     volumes:
       - ./data/grafana:/var/lib/grafana
 
