fix: ERROR: for grafana  Cannot start service grafana: unable to find group #{UID}: no matching entries in group file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,7 +57,7 @@ services:
       - influxdb
     ports:
       - 3000:3000
-    user: "${UID}:#{UID}"
+    user: ${UID}
     volumes:
       - ./data/grafana:/var/lib/grafana
 
